[project]
name = "reasoningmem"
version = "0.1.0"
description = "Agent reasoning memory database for high-quality and observable logic."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
    "apsw>=3.51.3.0",
    "vectorlite-py>=0.2.0",
]

[project.urls]
Repository = "https://github.com/bolu61/reasoningmem"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
